# LLMBenchmarking

./: README.md
multlimodal-exams-main/: CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  environment.yml  final_valid.py  generic_processing_nb.ipynb  pipeline  pipeline 2  pipeline.cpp  requirements.txt  sample_dataset.json
multlimodal-exams-main/base/: metadata_conf.py  pdf2text.py  pdf2text_v0.py  text2mcq.py
multlimodal-exams-main/label_studio/: README.md  format_json.py  interface_v3.xml
multlimodal-exams-main/validator/: check_dataset.py  exams_list.txt  requirements.txt
